# FOTA_Master

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  build.sh  conanfile.py
conf/: ecu.config
src/: fota_master.cpp
src/application/: CMakeLists.txt  fota_master_app.cpp  fota_master_app.hh
src/config/: CMakeLists.txt  ecu_config.cpp  ecu_config.hh
src/fotaClient/: CMakeLists.txt  fotaClient.cpp  fotaClient.hh
src/fotaClientFactory/: CMakeLists.txt  fotaClientFactory.cpp  fotaClientFactory.hh
src/gpioControl/: CMakeLists.txt  gpioControl.cpp  gpioControl.hh
src/protocolAdapter/canAdapter/: CMakeLists.txt  canAdapter.hh  canApdaper.cpp
src/protocolAdapter/restAdapter/: CMakeLists.txt  restAdapter.cpp  restAdapter.hh
testapp/: CMakeLists.txt  testCAN.cpp  testConfig.cpp  testFIFO1.cpp  testFIFO2.cpp  testReadPercent.cpp  testRest.cpp  testWakeupBtloader.cpp
testapp/hexATmega/: DELAY_TOGGLE_LED_100ms.hex  program.hex
